--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,8 +112,8 @@
    transition: all 0.3s ease-in-out;
 }
 
-::-webkit-scrollbar{
-    width: 0;
+::-webkit-scrollbar {
+   width: 0;
 }
 
 body {
@@ -158,6 +158,9 @@ header {
    font-weight: 400;
    line-height: normal;
 }
+.header-container__nav a:hover {
+   color: #ffd700;
+}
 .header-container__buttons {
    display: flex;
    align-items: center;
@@ -171,6 +174,9 @@ header {
    font-weight: 400;
    line-height: normal;
 }
+.header-container__buttons a:first-of-type:hover {
+   color: #ffd700;
+}
 .header-container__buttons a:last-of-type {
    color: #000;
    font-family: "DM Sans", sans-serif;
@@ -181,6 +187,9 @@ header {
    padding: 8px 24px;
    background-color: #fff;
    border-radius: 100px;
+}
+.header-container__buttons a:last-of-type:hover {
+   background-color: #ffd700;
 }
 /* header-end */
 
@@ -228,6 +237,9 @@ main > .container {
    align-items: center;
    border-radius: 100px;
    background: #ffd700;
+}
+.main-content a:hover {
+   box-shadow: 0px 0px 0px 2px #fff inset;
 }
 /* main-end */
 
@@ -281,6 +293,9 @@ main > .container {
    border: 2px solid #323232;
    background: #212121;
 }
+.popular-games__items-item div:hover img {
+   transform: scale(0.95);
+}
 .popular-games__items-item p {
    color: #fff;
    text-align: center;
@@ -290,7 +305,7 @@ main > .container {
    font-size: 18px;
    font-style: normal;
    font-weight: 500;
-   line-height: 28px; /* 155.556% */
+   line-height: 28px;
 }
 /* popular-games-end */
 
@@ -379,6 +394,9 @@ main > .container {
    font-weight: 500;
    line-height: 26px;
 }
+.events-schedule__big-card a:hover {
+   box-shadow: 0px 0px 0px 2px #fff inset;
+}
 .events-schedule__big-card img {
    position: absolute;
    right: 0;
@@ -452,6 +470,9 @@ main > .container {
    font-weight: 500;
    line-height: 26px;
 }
+.events-schedule__small-card a:hover {
+   box-shadow: 0px 0px 0px 2px #fff inset;
+}
 .events-schedule__small-card img {
    position: absolute;
    right: 0;
@@ -494,6 +515,11 @@ main > .container {
    font-weight: 500;
    line-height: 26px;
    padding-left: 24px;
+   outline: none;
+}
+.hero-form .container form input:first-of-type:focus,
+.hero-form .container form input:nth-of-type(2):focus {
+   box-shadow: 0px 0px 0px 2px #ebeaed inset;
 }
 .hero-form .container form input:last-of-type {
    display: inline-flex;
@@ -509,6 +535,9 @@ main > .container {
    font-style: normal;
    font-weight: 500;
    line-height: 26px;
+}
+.hero-form .container form input:last-of-type:hover {
+   box-shadow: 0px 0px 0px 2px #ebeaed inset;
 }
 .hero-form .container p {
    margin-top: 56px;
@@ -540,7 +569,7 @@ main > .container {
 /* footer-start */
 footer {
    margin-top: 40px;
-   margin-bottom: 40px
+   margin-bottom: 40px;
 }
 footer .container {
    display: flex;
@@ -562,6 +591,9 @@ footer .container {
    font-style: normal;
    font-weight: 400;
    line-height: normal;
+}
+.footer-container__nav a:hover{
+   color: #ffd700;
 }
 
 /* footer-end */
