--- a/incl/pages/reserve/reserve.css
+++ b/incl/pages/reserve/reserve.css
@@ -31,6 +31,61 @@
     left: 40px;
 }
 
+.reserve-settings__format .format-select {
+    position: absolute;
+    right: 40px;
+    top: 81.5px;
+    width: 310px;
+    padding: 24px 48px;
+    border-radius: 20px;
+    border: 2px solid #323232;
+    background: transparent;
+    color: #8B8B8B;
+    font-family: "Lato", sans-serif;
+    font-size: 24px;
+    appearance: none;
+    text-align: center;
+    background-image: url('../../../assets/images/reserve/select-arrow.png');
+    background-repeat: no-repeat;
+    background-position: right 24px center;
+}
+
+.format-select:hover{
+    background: #323232;
+}
+
+.format-select:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px #FFDA12;
+}
+
+.reserve-settings__time .date-select {
+    position: absolute;
+    top: 300px;
+    left: 822px;
+    max-width: 310px;
+    padding: 12px 24px 14px 24px;
+    border-radius: 10px;
+    border: 2px solid #323232;
+    background: #323232;
+    color: #8B8B8B;
+    font-family: "Lato", sans-serif;
+    font-size: 24px;
+    appearance: none;
+    background-image: url('../../../assets/images/reserve/select-arrow.png');
+    background-repeat: no-repeat;
+    background-position: right 24px center;
+}
+
+.date-select:hover{
+    background: transparent;
+}
+
+.date-select:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px #FFDA12;
+}
+
 .reserve-settings__format>h4 {
     position: absolute;
     top: 40px;
@@ -167,6 +222,14 @@
     line-height: normal;
 }
 
+.reserve-settings>a:hover{
+    box-shadow: 0px 0px 0px 4px #fff inset;
+}
+
+.reserve-settings>a:hover img{
+    transform: translateY(4px);
+}
+
 .reserve-info {
     margin-top: 40px;
     width: 1258px;
@@ -212,4 +275,32 @@
     font-weight: 500;
     line-height: 135%;
     /* 32.4px */
+}
+
+.reserve-settings__time .hours-select {
+    position: absolute;
+    top: 300px;
+    right: 40px;
+    width: 178px;
+    padding: 12px 0 14px;
+    border-radius: 10px;
+    border: 2px solid #323232;
+    background: #323232;
+    color: #8B8B8B;
+    font-family: "Lato", sans-serif;
+    font-size: 24px;
+    text-align: center;
+    appearance: none;
+    background-image: url('../../../assets/images/reserve/select-arrow.png');
+    background-repeat: no-repeat;
+    background-position: right 12px center;
+}
+
+.hours-select:hover{
+    background: transparent;
+}
+
+.hours-select:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px #FFDA12;
 }
