--- a/incl/pages/tournament-page/tournament-page.css
+++ b/incl/pages/tournament-page/tournament-page.css
@@ -82,6 +82,9 @@
    font-weight: 500;
    line-height: 26px;
 }
+.tournament-page__button:hover{
+   box-shadow: 0px 0px 0px 4px #fff inset;
+}
 
 .tournament-page__prize p:first-of-type {
    position: absolute;
