--- a/incl/pages/tournaments/tournaments.css
+++ b/incl/pages/tournaments/tournaments.css
@@ -28,6 +28,9 @@
     font-weight: 700;
     line-height: 28px;
 }
+.tournaments-container__filter a:hover img{
+    transform: rotate(360deg);
+}
 
 .tournaments-container__items {
     margin-top: 20px;
@@ -130,6 +133,9 @@
     font-weight: 500;
     line-height: 26px;
     /* 162.5% */
+}
+.tournaments-container__item>a:hover{
+    box-shadow: 0px 0px 0px 2px #fff inset;
 }
 
 .tournaments-container__item>img {
