--- a/incl/pages/auth/auth.css
+++ b/incl/pages/auth/auth.css
@@ -122,3 +122,30 @@
    font-weight: 500;
    line-height: 26px; /* 144.444% */
 }
+@media screen and (max-width: 1024px) {
+   .auth-container {
+      width: 90%;
+      max-width: 500px;
+      margin-top: 100px;
+   }
+}
+@media screen and (max-width: 576px) {
+   .auth-container {
+      padding: 30px 20px;
+   }
+   
+   .auth-container h2 {
+      font-size: 28px;
+   }
+   
+   .auth-form input {
+      padding: 12px 15px;
+      font-size: 16px;
+   }
+   
+   .auth-form button {
+      padding: 12px 0;
+      font-size: 16px;
+   }
+}
+
